refactor(modeling): unify committed update representation
Use ModelUpdate as the canonical durable commit result across assignment, transport, repository, fixture materialization and update tracking. This removes the parallel ModelCommitStepResult representation without changing ordering, identity restoration or compact result behavior.